--- a/css/base.css
+++ b/css/base.css
@@ -270,11 +270,11 @@ s {
 
 .shouye-wrap>.box-right {
 	transition: all .5s ease;
-	-webkit-transition: all .5s ease;
-	-moz-transition: all .5s ease;
-	-ms-transition: all .5s ease;
-	-o-transition: all .5s ease;
-	transition: all .5s ease;
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	-ms-transition: all 1s ease;
+	-o-transition: all 1s ease;
+	transition: all 1s ease;
 	overflow: hidden;
 }
 
