--- a/css/base.css
+++ b/css/base.css
@@ -242,8 +242,8 @@ s {
 	-webkit-transition: all .3s ease;
 	-moz-transition: all .3s ease;
 	-ms-transition: all .3s ease;
-	-o-transition: all .3 ease;
-	transition: all .3 ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
 }
 
 .shouye-wrap>.box-left>.box-left-nav ul>.title {
