--- a/css/base.css
+++ b/css/base.css
@@ -159,7 +159,11 @@ s {
 }
 
 .show {
-	width: 270px!important
+	transform:translateX(0);
+	-ms-transform:translateX(0); 	/* IE 9 */
+	-moz-transform:translateX(0); 	/* Firefox */
+	-webkit-transform:translateX(0); /* Safari 和 Chrome */
+	-o-transform:translateX(0); 
 }
 
 .ml {
@@ -239,11 +243,16 @@ s {
 	height: 100%;
 	overflow: hidden;
 	background-color: #00a3df;
-	-webkit-transition: all .1s ease;
-	-moz-transition: all .1s ease;
-	-ms-transition: all .1s ease;
-	-o-transition: all .1s ease;
-	transition: all .1s ease;
+	transform:translateX(-270px);
+	-ms-transform:translateX(-270px); 	/* IE 9 */
+	-moz-transform:translateX(-270px); 	/* Firefox */
+	-webkit-transform:translateX(-270px); /* Safari 和 Chrome */
+	-o-transform:translateX(-270px); 
+	-webkit-transition: all 1s ease;
+	-moz-transition: all 1s ease;
+	-ms-transition: all 1s ease;
+	-o-transition: all 1s ease;
+	transition: all 1s ease;
 }
 
 .shouye-wrap>.box-left>.box-left-nav ul>.title {
