--- a/css/base.css
+++ b/css/base.css
@@ -239,7 +239,7 @@ s {
 	top: 0;
 	left: 0;
 	z-index: 1;
-	width: 0;
+	width: 270px;
 	height: 100%;
 	overflow: hidden;
 	background-color: #00a3df;
