--- a/css/base.css
+++ b/css/base.css
@@ -174,7 +174,7 @@ s {
 	left:0;
 	right:0;
 	bottom:0;
-	background-color: transparence;
+	background-color: transparen;
 	transform:translateX(270px);
 	-ms-transform:translateX(270px); 	/* IE 9 */
 	-moz-transform:translateX(270px); 	/* Firefox */
